[tool.poetry]
name = "ddlc_api"
version = "0.1.0"
description = "The DDLC API"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^3.12.1"
python-dotenv = "^0.19.1"
dnspython = "^2.1.0"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^24.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
